<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="5sp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:id="@+id/selecciona"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selecciona"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/radiogroup"
            android:layout_marginBottom="10dp"/>

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/fondo_grupo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selecciona"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="10sp">
            <RadioButton
                android:id="@+id/ninguno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ninguno"
                android:textColor="@color/white"
                app:buttonTint="@color/radio_checked"/>
            <RadioButton
                android:id="@+id/ganymede"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ganymede"
                android:textColor="@color/white"
                app:buttonTint="@color/radio_checked"/>
            <RadioButton
                android:id="@+id/luna"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/luna"
                android:textColor="@color/white"
                app:buttonTint="@color/radio_checked"/>
            <RadioButton
                android:id="@+id/saturno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturno"
                android:textColor="@color/white"
                app:buttonTint="@color/radio_checked"/>
            <RadioButton
                android:id="@+id/pluton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pluton"
                android:textColor="@color/white"
                app:buttonTint="@color/radio_checked"/>
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>